manifests/faabfilms-nl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: faab-films
  name: faab-films
spec:
  replicas: 2
  selector:
    matchLabels:
      app: faab-films
  template:
    metadata:
      labels:
        app: faab-films
    spec:
#      imagePullSecrets:
#        - name: onboarding-tmp-secret
      containers:
        - name: nginx
          image: registry.services.k8s.true.nl/03795-sebastiaan-playground/faab-films:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
