manifests/faabfilms-nl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faab-films
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
  selector:
    app: faab-films
